test/extern/ferguson/c-array/c_array-unmanaged-and-generic.good
c_array-unmanaged-and-generic.chpl:5: error: c_array element type cannot be generic
