test/extern/ferguson/c-array/c_array-unmanaged-and-generic.chpl
use CTypes;

class A { type t; }

var a = new c_array(unmanaged A?, 10);
